# MentalStack

./: .gitignore  Justfile  README.md  TODO.md  claude-stack.kdl  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/ccpm/: SKILL.md
.claude/skills/ccpm/references/: command-safety.md  context.md  conventions.md  execute.md  initiative.md  plan.md  review.md  structure.md  sync.md  track.md
.claude/skills/ccpm/references/scripts/: blocked.sh  ccpm-cancel-initiative.sh  ccpm-commit-epic.sh  ccpm-commit-initiative.sh  ccpm-commit-review-fix.sh  ccpm-commit-task-work.sh  ccpm-commit-tasks.sh  ccpm-create-branch.sh  ccpm-detect-mode.sh  ccpm-fetch-review-comments.sh  ccpm-find.sh  ccpm-gh-verify.sh  ccpm-git-info.sh  ccpm-merge-initiative.sh  ccpm-push-branch.sh  ccpm-push-for-review.sh  ccpm-reply-review-thread.sh  ccpm-settings.sh  epic-list.sh  epic-show.sh  epic-status.sh  help.sh  in-progress.sh  init.sh  initiative-list.sh  initiative-status.sh  next.sh  paths-lib.sh  search.sh  standup.sh  status.sh  upstream-sync.sh  validate.sh
.claude/skills/ccpm/references/scripts/lib/: coordinator-lib.sh
doc/: design.md
src/mentalstack/: server.py  view.py
tests/: conftest.py  test_integration.py  test_server.py  test_view.py
