[project]
name = "mentalstack"
version = "0.1.0"
description = "A per-project depth-first call stack for Claude Code, with a live zellij sidebar TUI and an MCP server."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    { name = "Raphael Knaus" },
]
dependencies = [
    "mcp[cli]",
    "rich",
]

[project.scripts]
mentalstack-server = "mentalstack.server:main"
mentalstack-view = "mentalstack.view:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mentalstack"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mentalstack.server"
disable_error_code = ["untyped-decorator"]
